// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<EmployeesList /> should render table with not found message 1`] = `
.c0 {
  overflow-x: auto;
  margin-top: 3.5rem;
  border: 0.1rem solid #ddd;
  border-radius: 0.4rem 0.4rem 0 0;
}

.c1 {
  border-collapse: collapse;
  width: 100%;
}

.c1 tr {
  -webkit-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
  -webkit-transform: scale(1);
  -moz-transform: scale(1);
  box-shadow: 0 0 0.4rem rgba(0,0,0,0.2);
  -webkit-box-shadow: 0 0 0.4rem rgba(0,0,0,0.2);
  -moz-box-shadow: 0 0 0.4rem rgba(0,0,0,0.2);
}

.c1 thead th {
  padding: 1.5rem 0;
  background-color: #5984c0;
  color: #fff;
  font-weight: 500;
  text-transform: uppercase;
}

.c1 th,
.c1 td {
  border-bottom: 0.1rem solid #ddd;
  text-align: center;
  font-size: 1.6rem;
}

.c1 td {
  background-color: #fff;
  padding: 0.5rem 1rem;
  font-weight: 400;
  font-color: #1c1c1c;
}

.c1 td[colspan='5'] {
  padding: 1.5rem;
}

.c1 td img {
  height: 3.5rem;
  width: 3.5rem;
  border-radius: 100%;
}

@media only screen and (max-width:57.6rem) {
  .c1 td {
    padding: 0.8rem 2rem;
  }

  .c1 thead th {
    padding: 0.8rem;
  }
}

<div>
  <div
    class="c0"
  >
    <table
      class="c1"
    >
      <thead>
        <tr>
          <th>
            Foto
          </th>
          <th>
            Nome
          </th>
          <th>
            Cargo
          </th>
          <th>
            Data de admissão
          </th>
          <th>
            Telefone
          </th>
        </tr>
      </thead>
      <tbody>
        <tr>
          <td
            colspan="5"
          >
            Funcionários não foram encontrados
          </td>
        </tr>
      </tbody>
    </table>
  </div>
</div>
`;

exports[`<EmployeesList /> should render table with three employees 1`] = `
.c0 {
  overflow-x: auto;
  margin-top: 3.5rem;
  border: 0.1rem solid #ddd;
  border-radius: 0.4rem 0.4rem 0 0;
}

.c1 {
  border-collapse: collapse;
  width: 100%;
}

.c1 tr {
  -webkit-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
  -webkit-transform: scale(1);
  -moz-transform: scale(1);
  box-shadow: 0 0 0.4rem rgba(0,0,0,0.2);
  -webkit-box-shadow: 0 0 0.4rem rgba(0,0,0,0.2);
  -moz-box-shadow: 0 0 0.4rem rgba(0,0,0,0.2);
}

.c1 thead th {
  padding: 1.5rem 0;
  background-color: #5984c0;
  color: #fff;
  font-weight: 500;
  text-transform: uppercase;
}

.c1 th,
.c1 td {
  border-bottom: 0.1rem solid #ddd;
  text-align: center;
  font-size: 1.6rem;
}

.c1 td {
  background-color: #fff;
  padding: 0.5rem 1rem;
  font-weight: 400;
  font-color: #1c1c1c;
}

.c1 td[colspan='5'] {
  padding: 1.5rem;
}

.c1 td img {
  height: 3.5rem;
  width: 3.5rem;
  border-radius: 100%;
}

@media only screen and (max-width:57.6rem) {
  .c1 td {
    padding: 0.8rem 2rem;
  }

  .c1 thead th {
    padding: 0.8rem;
  }
}

<div>
  <div
    class="c0"
  >
    <table
      class="c1"
    >
      <thead>
        <tr>
          <th>
            Foto
          </th>
          <th>
            Nome
          </th>
          <th>
            Cargo
          </th>
          <th>
            Data de admissão
          </th>
          <th>
            Telefone
          </th>
        </tr>
      </thead>
      <tbody>
        <tr>
          <td>
            <img
              alt="João"
              src="https://img.favpng.com/25/7/23/computer-icons-user-profile-avatar-image-png-favpng-LFqDyLRhe3PBXM0sx2LufsGFU.jpg"
            />
          </td>
          <td>
            João
          </td>
          <td>
            Back-end
          </td>
          <td>
            01/12/2019
          </td>
          <td>
            +55 (51) 23456-7890
          </td>
        </tr>
        <tr>
          <td>
            <img
              alt="Roberto"
              src="https://e7.pngegg.com/pngimages/550/997/png-clipart-user-icon-foreigners-avatar-child-face.png"
            />
          </td>
          <td>
            Roberto
          </td>
          <td>
            Front-end
          </td>
          <td>
            11/03/2020
          </td>
          <td>
            +55 (50) 32165-4789
          </td>
        </tr>
        <tr>
          <td>
            <img
              alt="Maria"
              src="https://www.clipartmax.com/png/middle/277-2772117_user-profile-avatar-woman-icon-avatar-png-profile-icon.png"
            />
          </td>
          <td>
            Maria
          </td>
          <td>
            Front-end
          </td>
          <td>
            14/03/2020
          </td>
          <td>
            +55 (57) 89456-1230
          </td>
        </tr>
      </tbody>
    </table>
  </div>
</div>
`;
